tests/functional/lang/eval-fail-attr-name-type.err.exp
error:
       … while evaluating the attribute 'puppy."${key}"'
         at /pwd/lang/eval-fail-attr-name-type.nix:3:5:
            2|   attrs = {
            3|     puppy.doggy = {};
             |     ^
            4|   };

       … while evaluating an attribute name
         at /pwd/lang/eval-fail-attr-name-type.nix:7:17:
            6| in
            7|   attrs.puppy.${key}
             |                 ^
            8|

       error: expected a string but found an integer: 1
       at /pwd/lang/eval-fail-attr-name-type.nix:7:17:
            6| in
            7|   attrs.puppy.${key}
             |                 ^
            8|
